--- a/directory.html
+++ b/directory.html
@@ -7,7 +7,7 @@
 
 <p>
 SWEN Project
-
+<p>Date/Time: <span id="datetime"></span></p>
 Welcome to our SWEN101 Project!
 WeSearch is an app that focuses on helping communities conduct and participate in research. <br/>
 You can create articles, surveys, and interviews, and share them with others. You can read  <br/>
