--- a/directory.html
+++ b/directory.html
@@ -1,12 +1,12 @@
 <html>
 <link rel = "stylesheet" type = "text/css" href = "swenapppages/appstyle.css">
- <span><a href = "https://tommy-mills.github.io/WeSearch/swenapppages/login.html">
+ <span><a href = "https://henry1337.github.io/Bedtime/swenapppages/login.html">
 <p align = "right">Log Off</p>
  </a></span>
 <h1> WeSearch </h1>
 
 <p>
-SWEN Project
+Bedtime
 <body> 
     <script type="text/javascript"> 
         var myDate = new Date(); 
@@ -31,13 +31,9 @@ SWEN Project
         document.write("\tCurrent time is : " + myTime); 
     </script> 
 </body> 
-Welcome to our SWEN101 Project!
-WeSearch is an app that focuses on helping communities conduct and participate in research. <br/>
-You can create articles, surveys, and interviews, and share them with others. You can read  <br/>
-about and follow new research in your community, or begin some of your own and publish articles. <br/>
+It's Bedtime!
 
-(Color icon by Icons8)
-Our base page is 'https://tommy-mills.github.io/WeSearch'. This is our directory.
+Our base page is 'https://henry1337.github.io/Bedtime'. This is our directory.
  </p>
  <hr/>
  
