--- a/directory.html
+++ b/directory.html
@@ -3,7 +3,7 @@
  <span><a href = "https://henry1337.github.io/Bedtime/swenapppages/login.html">
 <p align = "right">Log Off</p>
  </a></span>
-<h1> WeSearch </h1>
+<h1> Bedtime </h1>
 
 <p>
 Bedtime
